# Whatsai

./: .env  README.md  Source code.py  bot_worker.js  nodemon.json  package-lock.json  package.json  server.js
client-app/: README.md  api-test.html  build-app.sh  build-wasm.sh  dev-server.js  index.html  package-lock.json  package.json  start-app.sh  start-dev.sh  start-proxy.sh  test-api.sh  test-gemini-api.js  vite.config.js
client-app/proxy-server/: .env.example  package.json  server.js
client-app/src/: api-test.js  gemini-api-proxy.js  gemini-api.js  main.js  secure-key-manager.js  wasm-loader.js  whatsapp-automation.js
client-app/wasm/: Cargo.toml
client-app/wasm/src/: lib.rs
