[package]
name = "whatsapp-automation"
version = "0.1.0"
edition = "2021"
authors = ["OpenHands <openhands@all-hands.dev>"]
description = "WebAssembly module for WhatsApp Web automation"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "NodeList",
  "Window",
  "console",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "DomRect",
  "Performance",
  "PerformanceTiming"
]

[profile.release]
opt-level = 3
lto = true